@@ -142,9 +142,14 @@ int mosquittopp::log_init(int priorities, int destinations)
 	return mosquitto_log_init(mosq, priorities, destinations);
 }
 
-int mosquittopp::will_set(bool will, const char *topic, uint32_t payloadlen, const uint8_t *payload, int qos, bool retain)
+int mosquittopp::will_set(const char *topic, uint32_t payloadlen, const uint8_t *payload, int qos, bool retain)
 {
-	return mosquitto_will_set(mosq, will, topic, payloadlen, payload, qos, retain);
+	return mosquitto_will_set(mosq, topic, payloadlen, payload, qos, retain);
+}
+
+int mosquittopp::will_clear()
+{
+	return mosquitto_will_clear(mosq);
 }
 
 int mosquittopp::username_pw_set(const char *username, const char *password)
